--- a/tarun.html
+++ b/tarun.html
@@ -22,11 +22,11 @@
 
 <ul id="myUL">
   <li>Go for Morning walk</li>
-  <li >Bill payment</li>
-  <li>Hangout with friends</li>
+    <li >make payment</li>
   <li>Buying and eating </li>
   <li>Working on web page</li>
   <li>Organize my work place</li>
+  <li>Hangout with friends</li>
 </ul>
     
 </body>
